Add new branch feat-js-basics

--- a/.gitignore
+++ b/.gitignore
@@ -129,10 +129,10 @@ dist
 .yarn/install-state.gz
 .pnp.*
 .idea
-node_js_test
+node_js_test/
 js_basics/node_modules/
-js_basics_test
-node_js
+js_basics_test/
+node_js/
 
 
 
