--- a/.gitignore
+++ b/.gitignore
@@ -129,10 +129,10 @@ dist
 .yarn/install-state.gz
 .pnp.*
 .idea
-node_js_test/
+aqa-advanced-3/node_js_test/
 js_basics/node_modules/
-js_basics_test/
-node_js/
+aqa-advanced-3/js_basics_test/
+aqa-advanced-3/node_js/
 
 
 
